@@ -26,34 +26,24 @@ class WorkingCopies(object):
 
     def checkout(self, packages, **kwargs):
         errors = False
-        skip_errors = kwargs.get('skip_errors', False)
         for name in packages:
             if name not in self.sources:
                 logger.error("Checkout failed. No source defined for '%s'." % name)
-                if not skip_errors:
-                    sys.exit(1)
-                else:
-                    errors = True
+                sys.exit(1)
             source = self.sources[name]
             try:
                 kind = source['kind']
                 wc = workingcopytypes.get(kind)
                 if wc is None:
                     logger.error("Unknown repository type '%s'." % kind)
-                    if not skip_errors:
-                        sys.exit(1)
-                    else:
-                        errors = True
+                    sys.exit(1)
                 output = wc.checkout(source, **kwargs)
-                if kwargs.get('verbose', False):
+                if kwargs.get('verbose', False) and output is not None and output.strip():
                     print output
             except WCError, e:
                 for l in e.args[0].split('\n'):
                     logger.error(l)
-                if not skip_errors:
-                    sys.exit(1)
-                else:
-                    errors = True
+                sys.exit(1)
         return errors
 
     def matches(self, source):
@@ -104,7 +94,7 @@ class WorkingCopies(object):
                     logger.error("Unknown repository type '%s'." % kind)
                     sys.exit(1)
                 output = wc.update(source, **kwargs)
-                if kwargs.get('verbose', False):
+                if kwargs.get('verbose', False) and output is not None and output.strip():
                     print output
             except WCError, e:
                 for l in e.args[0].split('\n'):
